--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -4,7 +4,7 @@
 <div class="relative h-[80vh] min-h-[600px] w-full overflow-hidden">
     <!-- Background Image with Overlay -->
     <div class="absolute inset-0">
-        <img src="/images/cover.webp" 
+        <img src="/images/mCover.webp" 
              alt="Sri Lanka Landscape" 
              class="w-full h-full object-cover object-[center_20%] rounded-xl" />
         <!-- Add rounded-xl to the gradient overlay -->
