--- a/src/views/destinations.ejs
+++ b/src/views/destinations.ejs
@@ -3,7 +3,7 @@
 <!-- Hero Section -->
 <div class="relative h-[50vh] min-h-[400px] w-full overflow-hidden">
     <div class="absolute inset-0">
-        <img src="/images/cover.webp" 
+        <img src="/images/mCover.webp" 
              alt="Sri Lanka Landscape" 
              class="w-full h-full object-cover object-[center_20%] rounded-xl" />
         <!-- Add rounded-xl to the gradient overlay -->
