--- a/src/views/layout/boilerplate.ejs
+++ b/src/views/layout/boilerplate.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="4y-ZzdSRcW1Vg9m1bWvrtu2Ev9sTOcdomkcXN-8cnL8" />
     <title>TripPlanner</title>
     
     <!-- Global Icon (Favicon) -->
